output_10.1.168/random_quda.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/random_quda.h-355169.hip.

[HIPIFY] info: file './quda/include/random_quda.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 9
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 155
  TOTAL bytes: 3588
  CHANGED lines of code: 10
  TOTAL lines of code: 151
  CODE CHANGED (in bytes) %: 4
  CODE CHANGED (in lines) %: 7
  TIME ELAPSED s: 0.54
[HIPIFY] info: CONVERTED refs by type:
  device_library: 8
  include: 1
[HIPIFY] info: CONVERTED refs by API:
  cuRAND API: 9
[HIPIFY] info: CONVERTED refs by names:
  curand_kernel.h: 1
  curand_normal: 1
  curand_normal_double: 1
  curand_uniform: 3
  curand_uniform_double: 3
